--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "lodash": "~2.4.1",
-    "angular-youtube-mb": "~0.1.1"
+    "angular-youtube-mb": "~0.1.1",
+    "ngCordova": "~0.1.17-alpha"
   }
 }
